# gerar_xml_protheus

./: README.md  main.py  pyproject.toml  requirements.txt
gerar_xml_protheus/: extensions.py  xml.py  xml_db_filter.py  xml_generator.py  xml_query.py
